# fast-craftsmanship

./: .coverage.DESKTOP-CKRPUKH.5345.XQsbifMx  .gitignore  404.html  CLAUDE.md  Makefile  README.md  ROADMAP.md  agent_guidelines.md  index.html  mkdocs.yml  objects.inv  plan.md  pyproject.toml  pytest.ini  python_functional_guide.py  sitemap.xml
.cursor/rules/: tests-expression.mdc  write-rop-like.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bump-version.yml  ci.yml  docs.yml  release.yml
api/schemas/: test_endpoint.py
commands/: index.html
commands/compact/: index.html
commands/github/: index.html
commands/project/: index.html
commands/verify/: index.html
development/architecture/: index.html
development/contributing/: index.html
docs/: getting-started.md  index.md
docs/agent/: agent_guidelines_large.md  agent_guidelines_small.md
docs/api/: docstrings.md  reference.md
docs/backend/: index.html
docs/cli/: index.html
docs/commands/: compact.md  docs.md  github.md  index.md  project.md  verify.md
docs/development/: architecture.md  contributing.md  diagrams.md
fcship/: .coverage  README.md  cli.py  command_list.py  hello.py  pyproject.toml
fcship/commands/: README.md  __init__.py  api.py  base.py  db.py  docs.py  domain.py  github.py  project.py  repo.py  service.py  test.py  verify.py
fcship/commands/commit/: generate_commit_message.py  prompt.md  utils.py
fcship/commands/compact/: README.md  __init__.py  __main__.py  ast_utils.py  cli.py  compact.py  compact_code_visitor.py  compact_notation.txt  compactors.py  file_utils.py  generator.py  token_counter.py
fcship/commands/github/: __init__.py  cli.py  github_utils.py  main.py  setup.py
fcship/commands/md_scrapper/: __init__.py  browser_pool.py  content_manager.py  context.py  logger.py  monitoring.py  orchestrator.py  pipeline.py  playwright_manager.py  rate_limiter.py  result_utils.py  types.py  url_tracker.py  validation.py  validation_exceptions.py  worker.py
fcship/fcship/: __init__.py  cli.py  utils.py
fcship/fcship/commands/: __init__.py  api.py  commit.py  db.py  docs.py  domain.py  project.py  repo.py  service.py  test.py  verify.py
fcship/fcship/commands/commit/: commit.py  commit_types.py
fcship/fcship/commands/md_scrapper/: browser_pool.py  config.py  content_manager.py  context.py  exceptions.py  file_handlers.py  functional_utils.py  logger.py  playwright_manager.py  progress.py  rate_limiter.py  result_utils.py  retry.py  scrapper.py  type_helpers.py  url_tracker.py  url_utils.py  validation.py  validation_exceptions.py  worker.py
fcship/fcship/templates/: __init__.py  project_templates.py  repo_templates.py  test_templates.py
fcship/fcship/tui/: __init__.py  display.py  errors.py  extra.py  helpers.py  input.py  panels.py  progress.py  tables.py
fcship/fcship/utils/: __init__.py  error_handling.py  file_utils.py  functional.py  type_utils.py  ui.py  validation.py
fcship/templates/: api_templates.py  domain_templates.py  service_templates.py
fcship/tests/: conftest.py  test_error_handling.py  test_verify.py
fcship/tests/tui/: test_display.py  test_panels.py
fcship/tests/utils/: test_error_handling.py  test_file_utils.py  test_functional.py  test_type_utils.py  test_ui.py
fcship/tui/: README.md  __init__.py  display.py  errors.py  extra.py  helpers.py  input.py  menu.py  panels.py  progress.py  tables.py  types.py
fcship/utils/: __init__.py  error_handling.py  file_utils.py  functional.py  type_utils.py
functional/: index.html
getting-started/: index.html
scripts/: semantic_release.py
search/: search_index.json
test-project/: README.md  pyproject.toml
tests/: conftest.py  test_api_commands.py  test_cli.py
(+143 files in other folders)
