[project]
name = "fcship"
version = "0.1.0"
description = "Fast-craftsmanship CLI tool for managing FastAPI project structure and code generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "typer>=0.15.1",
    "alembic>=1.13.1",
    "rich>=13.9.0",
]

[project.scripts]
craftsmanship = "fcship.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "black>=24.1.1",
    "pytest>=8.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
