[project]
name = "fast_craftsmanship"
version = "0.1.0"
description = "Fast-craftsmanship CLI tool for managing FastAPI project structure and code generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
    "typer>=0.15.1",
    "alembic>=1.13.1",
    "rich>=13.9.0",
    "expression[pydantic]>=5.6.0",
    "pytest>=8.3.4",
    "black>=25.1.0",
    "flake8>=7.1.2",
    "mypy>=1.15.0",
    "tqdm>=4.67.1",
    "playwright>=1.50.0",
    "beautifulsoup4>=4.13.3",
    "markdown>=3.7",
    "pytest-asyncio>=0.25.3",
    "hypothesis>=6.126.0",
]

[project.scripts]
fcship = "fcship.cli:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "black>=24.1.1",
    "pytest>=8.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fcship"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestReturnNotNoneWarning",
    "ignore::pytest.PytestDeprecationWarning"
]
